fix: adjust `.backdrop-title` positioning for better alignment

--- a/styles/base/utils.css
+++ b/styles/base/utils.css
@@ -37,17 +37,18 @@
 .backdrop-title::after {
   content: attr(data-title);
   position: absolute;
-  top: -0.45em;
-  left: 0.06em;
+  top: -0.3em;
+  left: 0.6em;
   z-index: -1;
   font-family: var(--font-family-accent);
   font-size: 2.8em;
+  line-height: 1;
   color: transparent;
   -webkit-text-stroke: 1px var(--color-dark-gray);
 }
 
 .backdrop-title.centered::after {
-  top: -0.55em;
+  top: -0.25em;
   left: 50%;
   translate: -50% 0;
 }
